<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/payFragmentEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/pay_fragment_start_balance_text_view"
        android:textColor="@color/pay_fragment_text_color"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="numberDecimal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/payFragmentBalanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_fragment_balance_text_view"
        android:textColor="@color/pay_fragment_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payFragmentEditText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/payFragmentChooseMethodTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/pay_fragment_choose_method_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payFragmentBalanceTextView" />

    <LinearLayout
        android:id="@+id/payFragmentChooseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_title_pay_for_parking"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payFragmentChooseMethodTextView">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/payFragmentChooseTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pay_fragment_text_color"
            android:textStyle="bold"
            tools:text="Банковская карта"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/payFragmentChooseDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Комиссия 3,19% (минимум 3,49 ₽)" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pay_fragment_warning_comission"
        android:textColor="@color/pay_fragment_text_color"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/payFragmentChooseLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payFragmentPayButton"
        android:text="@string/pay_fragment_pay_button"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_pay_for_parking"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>