<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/on_boarding_background_grey"
    tools:context=".users_intro.OnBoardingFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onBoardingViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/onBoardingProgressBar"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/ic_circle_progress"
        tools:progress="30"
        app:layout_constraintStart_toStartOf="@id/onBoardingNextPageFAB"
        app:layout_constraintEnd_toEndOf="@id/onBoardingNextPageFAB"
        app:layout_constraintTop_toTopOf="@id/onBoardingNextPageFAB"
        app:layout_constraintBottom_toBottomOf="@id/onBoardingNextPageFAB"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/onBoardingNextPageFAB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:fabCustomSize="70dp"
        android:src="@drawable/ic_on_boarding_fab"
        android:backgroundTint="@color/on_boarding_primary_purple"
        app:backgroundTint="@color/on_boarding_secondary_purple"
        app:tint="@color/white"
        app:borderWidth="1dp"
        android:layout_marginBottom="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/next_page_on_boarding" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/onBoardingButtonSkip"
        android:text="@string/on_boarding_button_skip"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/onBoardingButtonBack"
        android:text="@string/on_boarding_button_back"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
